// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Switch] renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        undefined,
      ]
    }
  >
    <View>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "height": 31,
              "width": 51,
            },
            [
              {
                "alignSelf": "center",
              },
              {
                "opacity": 1,
              },
            ],
          ]
        }
        value={true}
      />
    </View>
  </View>
</View>
`;

exports[`[Switch] renders with given label 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        undefined,
      ]
    }
  >
    <View>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "height": 31,
              "width": 51,
            },
            [
              {
                "alignSelf": "center",
              },
              {
                "opacity": 1,
              },
            ],
          ]
        }
        value={true}
      />
    </View>
  </View>
  <Text
    style={
      {
        "fontSize": 32.14285714285714,
        "marginLeft": 10,
        "marginRight": 10,
      }
    }
  >
    A Label I Am
  </Text>
</View>
`;
